<resources>
    <string name="app_name">My Application</string>
<!--MENU ITEMS -->
    <string name="sort_by_popular">Sort by popular</string>
    <string name="sort_by_top_rated">Sort by top rated</string>
    <string name="sort_by_favourite">Sort by favourite</string>
    <string name="reload_data">Reload data</string>
<!--ACTION BAR TITLES-->
    <string name="actionbar_title_top_rated">Top rated</string>
    <string name="actionbar_title_most_popular">Most popular</string>
    <string name="actionbar_title_favourite">Favourite</string>

    <string name="actionbar_title_connection_error">Connection Error</string>

    <string name="refresh_error">Refresh</string>
<!--HEADERS-->
    <string name="header_title">Title</string>
    <string name="header_release_date">Release Date</string>
    <string name="header_vote_avarage">Vote Avarage</string>
    <string name="header_plot_synopsis">Plot synopsis</string>
    <string name="header_reviews_layout">Reviews: </string>
    <string name="header_videos_layout">Videos: </string>

    <!--ERRORS-->
    <string name="error_message_no_connection">No inthernet connection</string>
    <string name="error_message_list_is_null">Cannot fetch data from internet, list is null</string>
    <string name="error_message_bad_url_syntax">Bad syntax of URL</string>
<!--COMMUNICATES-->
    <string name="no_reviews">This movie hasn\'t got any reviews</string>
    <string name="no_videos">This movie hasn\'t got any videos</string>
    <string name="add_to_favourites">Movie has ben added to favourite!</string>
    <string name="delete_from_favourites">"Movie has been remove from favourite!"</string>
    <string name="failed_to_add_to_favourites">Failed to add to favourite</string>
    <!--SETTINGS-->
    <string name="main_activity_menu_settings">Settings</string>

    <string name="settings_horizontal_grid_items_default">5</string>
    <string name="settings_vertical_grid_items_default">3</string>

    <string name="settings_horizontal_grid_items_title">Horizontal grid items amount</string>
    <string name="settings_vertical_grid_items_title">Vertical grid items amount</string>

    <string name="settings_horizontal_grid_items_key">horizontal_grid_items</string>
    <string name="settings_vertical_grid_items_key">vertical_grid_items</string>

    <!--REVIEW ITEM-->
    <string name="item_review_author">Author: </string>
    <string name="item_review_content">Content: </string>
    <string name="item_review_readmore">Read more!</string>


</resources>
