<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/settings_horizontal_grid_items_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_horizontal_grid_items_key"
        android:title="@string/settings_horizontal_grid_items_title"/>
        <!--TODO SINGLE LINECO TO -->
        <!--android:singleLine="true"-->

    <EditTextPreference
        android:defaultValue="@string/settings_vertical_grid_items_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_vertical_grid_items_key"
        android:title="@string/settings_vertical_grid_items_title"/>
    />

</PreferenceScreen>