<?xml version="1.0" encoding="utf-8"?>
<menu   xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Activities.MainActivity">

    <item
        android:id="@+id/reload_data"
        android:orderInCategory="1"
        android:title="@string/reload_data"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="always"/>

    <item
        android:id="@+id/sort_by_popular"
        android:title="@string/sort_by_popular"
        android:orderInCategory="2"
        app:showAsAction="never"/>


    <item
        android:id="@+id/sort_by_top_rated"
        android:title="@string/sort_by_top_rated"
        android:orderInCategory="3"
        app:showAsAction="never"/>



</menu>