<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/item_review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/movie_video_item_margin_8dp"
        android:layout_marginRight="@dimen/movie_video_item_margin_8dp"
        android:textStyle="bold"
        android:textSize="@dimen/movie_review_item_headers_text_size"/>

    <TextView
        android:id="@+id/item_movie_review_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/movie_review_item_text_size"
        android:layout_marginLeft="@dimen/movie_video_item_margin_8dp"
        android:layout_marginRight="@dimen/movie_video_item_margin_8dp"/>

    <TextView
        android:text="@string/item_review_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/movie_video_item_margin_8dp"
        android:layout_marginRight="@dimen/movie_video_item_margin_8dp"
        android:textStyle="bold"
        android:textSize="@dimen/movie_review_item_headers_text_size"   />

    <TextView
        android:id="@+id/item_movie_review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/movie_video_item_margin_8dp"
        android:layout_marginRight="@dimen/movie_video_item_margin_8dp"
        android:maxLines="10"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/item_movie_review_url"
        android:text="@string/item_review_readmore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/movie_video_item_margin_8dp"
        android:layout_marginRight="@dimen/movie_video_item_margin_8dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/movie_review_item_readmore_text_size"/>

</LinearLayout>